--- a/source/makefile
+++ b/source/makefile
@@ -1,7 +1,7 @@
-CC=gcc
-CFLAGS=-shared -x c -Wall -O3 -fPIC
+CC=cc
+CFLAGS=-shared -Wall -g -fPIC
 LDFLAGS=-ldl -lm
-SOURCES=ca_data.c ca_dev.c ca_functions.c ca_main.c
+SOURCES=ca_misc.c ca_error.c ca_data.c ca_stream.c ca_inout.c functions/ca_utility.c functions/ca_analog.c functions/ca_relay.c functions/ca_digital.c functions/ca_oscilloscope.c
 OUTPUT=../binary/libcassy.so
 
 all:
