--- a/test/oscilloscope/makefile
+++ b/test/oscilloscope/makefile
@@ -2,5 +2,7 @@ CC=gcc
 CFLAGS=-g -I../../include
 LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
+clean:
+	rm -f oscillotest readstream
 %: $@.c
 	$(CC) $(CFLAGS) $@.c $(LDFLAGS) -o $@
