--- a/test/oscilloscope/makefile
+++ b/test/oscilloscope/makefile
@@ -1,8 +1,8 @@
 CC=gcc
-CFLAGS=-g -I../../include
+CFLAGS=-x c -g -I../../include
 LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 clean:
 	rm -f oscillotest readstream
-%: $@.c
+%:
 	$(CC) $(CFLAGS) $@.c $(LDFLAGS) -o $@
