Libusb fixes and new tests

--- a/source/makefile
+++ b/source/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-x c -shared -Wall -fPIC -DCA_LOCAL
-LDFLAGS=-lm
+LDFLAGS=-lm -ldl
 SOURCES=ca_misc.c ca_error.c ca_data.c ca_stream.c ca_inout.c functions/ca_utility.c functions/ca_analog.c functions/ca_relay.c functions/ca_digital.c functions/ca_oscilloscope.c
 OUTPUT=../binary/libcassy.so
 
