--- a/test/oscilloscope/makefile
+++ b/test/oscilloscope/makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-x c -g -I../../include
-LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
+LDFLAGS=-L../../binary -lcassy -lusb-1.0 -Wl,-rpath=../../binary
 
 clean:
-	rm -f oscillotest readstream
+	rm -f oscillotest oscillocont readstream
 %:
 	$(CC) $(CFLAGS) $@.c $(LDFLAGS) -o $@
