Added auto detection

--- a/test/basics/makefile
+++ b/test/basics/makefile
@@ -3,6 +3,6 @@ CFLAGS=-g -I../../include
 LDFLAGS=-L../../binary -lcassy -lusb-1.0 -Wl,-rpath=../../binary
 
 clean:
-	rm -f checkleds checkmemory relay squaresrc
+	rm -f checkleds checkmemory relay squaresrc autoscanning
 %:
 	$(CC) $(CFLAGS) $@.c $(LDFLAGS) -o $@
