--- a/test/basics/makefile
+++ b/test/basics/makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-g -I../../include
+CFLAGS=-g -I../../include -DCA_LIBUSB
 LDFLAGS=-L../../binary -lcassy -lusb-1.0 -Wl,-rpath=../../binary
 
 clean:
