--- a/test/analog/makefile
+++ b/test/analog/makefile
@@ -1,6 +1,6 @@
 CC=gcc
-CFLAGS=-g -I../../include -DCA_LIBUSB
-LDFLAGS=-L../../binary -lcassy -lusb-1.0 -Wl,-rpath=../../binary
+CFLAGS=-g -I../../include -DCA_DEVNODES
+LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 clean:
 	rm -f plotdata simpleinput
