--- a/test/basics/makefile
+++ b/test/basics/makefile
@@ -1,10 +1,17 @@
 CC=gcc
-CFLAGS=-g -I../../include -DCA_DEVNODES
+CFLAGS=-g -I../../include
 LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
+all: autoscanning checkleds checkmemory relay squaresrc
+autoscanning: autoscanning.c
+	$(CC) $(CFLAGS) -DCA_LIBUSB autoscanning.c $(LDFLAGS) -lusb-1.0 -o autoscanning
+checkleds: checkleds.c
+	$(CC) $(CFLAGS) -DCA_DEVNODES checkleds.c $(LDFLAGS) -o checkleds
+checkmemory: checkmemory.c
+	$(CC) $(CFLAGS) -DCA_DEVNODES checkmemory.c $(LDFLAGS) -o checkmemory
+relay: relay.c
+	$(CC) $(CFLAGS) -DCA_DEVNODES relay.c $(LDFLAGS) -o relay
+squaresrc: squaresrc.c
+	$(CC) $(CFLAGS) -DCA_DEVNODES squaresrc.c $(LDFLAGS) -o squaresrc
 clean:
-	rm -f checkleds checkmemory relay squaresrc
-autoscanning:
-	$(CC) -g -I../../include -DCA_LIBUSB autoscanning.c -L../../binary -lcassy -lusb-1.0 -Wl,-rpath=../../binary
-%:
-	$(CC) $(CFLAGS) $@.c $(LDFLAGS) -o $@
+	rm -f autoscanning checkleds checkmemory relay squaresrc
