--- a/test/fun/makefile
+++ b/test/fun/makefile
@@ -1,8 +1,9 @@
 CC=gcc
-CFLAGS=-x c -g -I../../include -DCA_DEVNODES
+CFLAGS=-g -I../../include
 LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
+all: oscillowav
+oscillowav: oscillowav.c
+	$(CC) $(CFLAGS) -DCA_DEVNODES oscillowav.c $(LDFLAGS) -o oscillowav
 clean:
 	rm -f oscillowav
-%:
-	$(CC) $(CFLAGS) $@.c $(LDFLAGS) -o $@
