Removed unnecessary compile flags

--- a/test/basics/makefile
+++ b/test/basics/makefile
@@ -4,14 +4,14 @@ LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 all: autoscanning checkleds checkmemory relay squaresrc
 autoscanning: autoscanning.c
-	$(CC) $(CFLAGS) -DCA_LIBUSB autoscanning.c $(LDFLAGS) -lusb-1.0 -o autoscanning
+	$(CC) $(CFLAGS) autoscanning.c $(LDFLAGS) -lusb-1.0 -o autoscanning
 checkleds: checkleds.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES checkleds.c $(LDFLAGS) -o checkleds
+	$(CC) $(CFLAGS) checkleds.c $(LDFLAGS) -o checkleds
 checkmemory: checkmemory.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES checkmemory.c $(LDFLAGS) -o checkmemory
+	$(CC) $(CFLAGS) checkmemory.c $(LDFLAGS) -o checkmemory
 relay: relay.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES relay.c $(LDFLAGS) -o relay
+	$(CC) $(CFLAGS) relay.c $(LDFLAGS) -o relay
 squaresrc: squaresrc.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES squaresrc.c $(LDFLAGS) -o squaresrc
+	$(CC) $(CFLAGS) squaresrc.c $(LDFLAGS) -o squaresrc
 clean:
 	rm -f autoscanning checkleds checkmemory relay squaresrc
