--- a/test/fun/makefile
+++ b/test/fun/makefile
@@ -4,6 +4,6 @@ LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 all: oscillowav
 oscillowav: oscillowav.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES oscillowav.c $(LDFLAGS) -o oscillowav
+	$(CC) $(CFLAGS) oscillowav.c $(LDFLAGS) -o oscillowav
 clean:
 	rm -f oscillowav
