--- a/test/oscilloscope/makefile
+++ b/test/oscilloscope/makefile
@@ -4,10 +4,10 @@ LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 all: oscillocont oscillotest readstream
 oscillocont: oscillocont.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES oscillocont.c $(LDFLAGS) -o oscillocont
+	$(CC) $(CFLAGS) oscillocont.c $(LDFLAGS) -o oscillocont
 oscillotest: oscillotest.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES oscillotest.c $(LDFLAGS) -o oscillotest
+	$(CC) $(CFLAGS) oscillotest.c $(LDFLAGS) -o oscillotest
 readstream: readstream.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES readstream.c $(LDFLAGS) -o readstream
+	$(CC) $(CFLAGS) readstream.c $(LDFLAGS) -o readstream
 clean:
 	rm -f oscillocont oscillotest readstream
