--- a/test/output/makefile
+++ b/test/output/makefile
@@ -4,8 +4,8 @@ LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 all: analogout generator
 analogout: analogout.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES analogout.c $(LDFLAGS) -o analogout
+	$(CC) $(CFLAGS) analogout.c $(LDFLAGS) -o analogout
 generator: generator.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES generator.c $(LDFLAGS) -o generator
+	$(CC) $(CFLAGS) generator.c $(LDFLAGS) -o generator
 clean:
 	rm -f analogout generator
