--- a/test/analog/makefile
+++ b/test/analog/makefile
@@ -4,8 +4,8 @@ LDFLAGS=-L../../binary -lcassy -Wl,-rpath=../../binary
 
 all: plotdata simpleinput
 plotdata: plotdata.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES plotdata.c $(LDFLAGS) -o plotdata
+	$(CC) $(CFLAGS) plotdata.c $(LDFLAGS) -o plotdata
 simpleinput: simpleinput.c
-	$(CC) $(CFLAGS) -DCA_DEVNODES simpleinput.c $(LDFLAGS) -o simpleinput
+	$(CC) $(CFLAGS) simpleinput.c $(LDFLAGS) -o simpleinput
 clean:
 	rm -f plotdata simpleinput
